--- a/style.css
+++ b/style.css
@@ -104,3 +104,19 @@ a{
 .plain-area{
     margin-bottom: 10000px;
 }
+.quote-area{
+    background-color: #E5E7EB;
+    margin-top: 128px;
+    padding: 48px 256px;
+}
+#quote{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: lighter;
+}
+#quote-author{
+    text-align: right;
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
