--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a{
     justify-content: center;
     align-items: center;
     width: 64px;
-    border-radius: 10%;
+    border-radius: 8px;
     padding: 8px 24px;
     background-color: #3882F6;
     color: #F9FAF8;
@@ -90,16 +90,16 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 5%;
+    border-radius: 16px;
     box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.211) ;
     font-size: 24px;
     color: #1F2937;
+    overflow: hidden;
 }
 
 .brand-images img{
     width: 250px;
     height: 350px;
-    border-radius: 5%;
 }
 .plain-area{
     margin-bottom: 10000px;
@@ -119,4 +119,37 @@ a{
     font-size: 36px;
     font-weight: bold;
     color: #1F2937;
+}
+.action-card{
+    margin: 128px 256px;
+    padding: 16px 128px;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #3882F6;
+    display: flex;
+    align-items: center;
+    color: #F9FAF8;
+}
+.action-card h2{
+    margin-bottom: 8px;
+}
+.action-card .button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #F9FAF8;
+    border-radius: 8px;
+    padding: 8px 24px;
+    margin-left: auto;
+    font-weight: 500;
+}
+.button a{
+    color: #F9FAF8;
+}
+.footer{
+    padding: 32px 128px;
+    background-color: #1F2937;
+    font-size: 18px;
+    text-align: center;
+    color: #E5E7EB;
 }
